# GalaxyMaps

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
meshes/: example_object.vtk  example_parameter.vtk  tgs_100349_object.vtk  tgs_100349_parameter.vtk  tlc_polycube_bird_object.vtk  tlc_polycube_bird_parameter.vtk
shader/: fs.frag  vs.vert
src/: canvas.cc  canvas.h  foliation_para.cc  foliation_para.h  galaxy.cc  galaxy.h  main.cc  mesh.cc  mesh.h  util.cc  util.h  vectorq.h
